# shuk_full_stack

./: .gitignore  Cargo.toml  README.md  cdk.json  package-lock.json  package.json
lambdas/backup-files/: Cargo.toml
lambdas/backup-files/src/: main.rs
lambdas/convert-mov/: Cargo.toml
lambdas/convert-mov/src/: main.rs
lambdas/metadata-store/: Cargo.toml
lambdas/metadata-store/src/: main.rs
lib/: shuk_file_handler-stack.ts
test/: shuk_file_handler.test.ts
