[package]
name = "convert-mov"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws-config = "1.5.8"
aws-sdk-mediaconvert = "1.53.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }

lambda_runtime = "0.13.0"
serde_json = "1.0.132"
tokio = { version = "1", features = ["macros"] }

